# wanna-debian

./: .gitignore  LICENSE  README.md  backport-bin.sh  backport-src.sh  backport.sh  check-eq.py  pre-dose.py  pre-dose.sh  pre_dose.py  pyproject.toml  topo-example.py  toposort.py
distrotracker/: __init__.py  chkabilibs.py  chkabilibs.sh  deblibdiff.py  deblibdiff.sh  distrotracker.py
docs/: index.md
docs/distrotracker/: index.md
docs/predose/: backport.drawio  backport.drawio.html  index.md
docs/simplebuilder/: index.md
predose/: __init__.py  backport.py  backport.sh  predose.py
simplebuilder/: Dockerfile  __init__.py  simplebuilder.py
tests/: test_parse_metadata.py  test_toposort.py
tests/data/: sample_Sources  test_resolve_pkg_name.py
tests/distrotracker/: test_distrotracker.py
tests/predose/: test_parse_metadata.py  test_remove_and_backport.py  test_resolve_bin.py  test_resolve_group.py  test_resolve_pkg_name.py  test_resolve_src.py
tests/predose/data/: new_Packages  new_Sources  sample_Packages  sample_Sources
tests/toposort/: test_toposort.py
toposort/: __init__.py  toposort.py
